--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.8.0"
+    "astro": "^1.8.0",
+    "prettier-plugin-astro": "^0.7.0"
   }
 }
