--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vue": "^1.2.2",
     "astro": "^1.8.0",
-    "prettier-plugin-astro": "^0.7.0"
+    "prettier-plugin-astro": "^0.7.0",
+    "vue": "^3.2.30"
   }
 }
