--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^1.3.0",
     "@astrojs/vue": "^1.2.2",
     "astro": "^1.8.0",
     "prettier-plugin-astro": "^0.7.0",
