--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@astrojs/vue": "^3.0.3",
     "astro": "^3.4.3",
     "prettier-plugin-astro": "^0.12.1",
+    "textlint": "^13.3.3",
+    "textlint-rule-preset-ja-spacing": "^2.3.0",
+    "textlint-rule-preset-ja-technical-writing": "^8.0.0",
+    "textlint-rule-spellcheck-tech-word": "^5.0.0",
     "vue": "^3.3.7"
   }
 }
