--- a/.textlintrc.json
+++ b/.textlintrc.json
@@ -1,11 +1,13 @@
 {
   "plugins": {},
   "filters": {},
-  "preset-ja-spacing": {
-    "ja-space-between-half-and-full-width": {
-      "space": "always"
-    }
-  },
-  "preset-ja-technical-writing": true,
-  "spellcheck-tech-word": true
+  "rules": {
+    "preset-ja-spacing": {
+      "ja-space-between-half-and-full-width": {
+        "space": "always"
+      }
+    },
+    "preset-ja-technical-writing": true,
+    "spellcheck-tech-word": true
+  }
 }
