--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/vue": "^4.0.8",
     "astro": "^4.1.1",
     "prettier-plugin-astro": "^0.12.3",
+    "squoosh": "^0.0.0",
     "textlint": "^13.4.1",
     "textlint-rule-preset-ja-spacing": "^2.3.0",
     "textlint-rule-preset-ja-technical-writing": "^10.0.1",
