--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "textlint-rule-preset-ja-spacing": "^2.4.3",
     "textlint-rule-preset-ja-technical-writing": "^10.0.1",
     "textlint-rule-spellcheck-tech-word": "^5.0.0",
+    "typescript": "^5.6.2",
     "vue": "^3.5.8"
   }
 }
