--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,12 @@ pnpm-debug.log*
 .vscode
 
 .netlify
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
