--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "textlint-rule-spellcheck-tech-word": "^5.0.0",
     "typescript": "^5.7.2",
     "vue": "^3.5.13"
-  }
+  },
+  "packageManager": "yarn@4.5.3"
 }
