--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "textlint:fix": "textlint --fix ./src/content/blog/"
   },
   "dependencies": {
+    "@ascorbic/feed-loader": "^1.0.4",
     "@astrojs/netlify": "^6.0.1",
     "@astrojs/vue": "^5.0.3",
     "astro": "^5.1.1",
