--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/netlify": "^6.0.1",
     "@astrojs/vue": "^5.0.3",
     "astro": "^5.1.1",
+    "astro-icon": "^1.1.5",
     "prettier-plugin-astro": "^0.14.1",
     "textlint": "^14.4.0",
     "textlint-rule-preset-ja-spacing": "^2.4.3",
