fea: add @iconify-json/mdi

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ascorbic/feed-loader": "^1.0.4",
     "@astrojs/netlify": "^6.0.1",
     "@astrojs/vue": "^5.0.3",
+    "@iconify-json/mdi": "^1.2.3",
     "astro": "^5.1.1",
     "astro-icon": "^1.1.5",
     "prettier-plugin-astro": "^0.14.1",
