--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@iconify-json/mdi": "^1.2.3",
     "astro": "^5.1.1",
     "astro-icon": "^1.1.5",
+    "astro-qiita-loader": "^0.0.1",
     "prettier-plugin-astro": "^0.14.1",
     "textlint": "^14.4.0",
     "textlint-rule-preset-ja-spacing": "^2.4.3",
